add about page, small improvements

--- a/index.css
+++ b/index.css
@@ -447,14 +447,18 @@ footer {
 
 .prev,
 .next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.5);
+  background: var(--text-muted);
   color: white;
   border: none;
-  padding: 10px 15px;
+  padding: 10px;
   cursor: pointer;
+  border-radius: 100%;
 }
 
 .prev {
@@ -529,6 +533,41 @@ th {
 
 .topnav {
   display: none;
+}
+
+#about-us {
+  background-color: var(--mold-green);
+}
+
+.about-us {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  max-width: 780px;
+}
+
+.about-section {
+  background-color: var(--white) !important;
+}
+
+
+.elementor-heading-title {
+  color: var(--text-color);
+  font-family: "Urbanist", Sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 50px;
+  margin-bottom: 24px;
+}
+
+.elementor-container p {
+  color: var(--text-color);
+  font-family: "Urbanist", Sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 0 0 18px 0;
 }
 
 @media (max-width: 768px) {
