--- a/index.css
+++ b/index.css
@@ -198,10 +198,25 @@ button.square-button {
   display: flex;
   padding: 13px 24px 11px 24px;
   align-items: flex-start;
+  justify-content: center;
   gap: 8px;
   border-radius: 8px;
   background: var(--text-muted);
   color: var(--white);
+  text-align: center;
+  font-size: 16px;
+}
+
+button.big-square-button {
+  display: flex;
+  padding: 24px 48px;
+  align-items: flex-start;
+  gap: 8px;
+  border-radius: 8px;
+  background: var(--text-muted);
+  color: var(--white);
+  font-size: 24px;
+  text-wrap: nowrap;
 }
 
 button:hover {
@@ -568,6 +583,89 @@ th {
   font-weight: 400;
   line-height: 30px;
   margin: 0 0 18px 0;
+}
+
+.certificate-hero {
+  display: flex;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.certificate-hero p {
+  margin: 0;
+}
+
+/* Modal stilleri */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: relative;
+  display: flex;
+  width: 80%;
+  width: 520px;
+  padding: 16px 24px;
+  flex-direction: column;
+  gap: 16px;
+  margin: 15% auto;
+  border-radius: 12px;
+  background: var(--Background-White, #FFF);
+}
+
+.modal-content-header h2 {
+  margin: 0;
+}
+
+.modal-content-header p {
+  margin: 0;
+}
+
+.modal-close {
+  position: absolute;
+  top: 16px;
+  right: 24px;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form label {
+  color: var(--text-loud-900, #0D0D12);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+form input {
+  display: flex;
+  padding: 8px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  border-radius: 8px;
+  border: 1px solid var(--border-normal-50, #ECEFF3);
+  background: #FFF;
+  margin-bottom: 16px;
 }
 
 @media (max-width: 768px) {
